unpackaged/main/default/objects/Origination_Fee__c/Origination_Fee__c.object-meta.xml
<CustomObject>
    <label>Origination Fee</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Origination Fees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>