unpackaged/main/default/objects/Origination_Fee__c/fields/Default__c.field-meta.xml
<CustomField>
    <fullName>Default__c</fullName>
    <description>This is the default Origination fee passed to the Calculator</description>
    <inlineHelpText>This is the default Origination fee passed to the Calculator</inlineHelpText>
    <label>Default</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>