unpackaged/main/default/objects/Origination_Fee__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <description>This is the first day the Ofee was available for use</description>
    <inlineHelpText>This is the first day the Ofee was available for use</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>