unpackaged/main/default/objects/Origination_Fee__c/fields/Maximum__c.field-meta.xml
<CustomField>
    <fullName>Maximum__c</fullName>
    <description>This is the maximum Origination fee passed to the Calculator</description>
    <inlineHelpText>This is the maximum Origination fee passed to the Calculator</inlineHelpText>
    <label>Maximum</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>