unpackaged/main/default/objects/Origination_Fee__c/fields/Minimum__c.field-meta.xml
<CustomField>
    <fullName>Minimum__c</fullName>
    <description>This is the minimum Origination fee passed to the Calculator</description>
    <inlineHelpText>This is the minimum Origination fee passed to the Calculator</inlineHelpText>
    <label>Minimum</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>