unpackaged/main/default/objects/Origination_Fee__c/fields/Pricing_Definition__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Definition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pricing Definition</label>
    <referenceTo>Pricing_Definition__c</referenceTo>
    <relationshipLabel>Origination Fees</relationshipLabel>
    <relationshipName>Origination_Fees</relationshipName>
    <type>Lookup</type>
</CustomField>